--- a/thefrontend/src/app/components/navbar/navbar.component.html
+++ b/thefrontend/src/app/components/navbar/navbar.component.html
@@ -88,6 +88,7 @@
                   </div>
                 </div>
               </li>
+             
               <li>
                 <div class="media">
                   <img
@@ -122,7 +123,7 @@
               </li>
             </ul>
           </li>
-
+<li><button (click)="logout()">logout</button></li>
           <li class="user-profile header-notification">
             <a href="#!">
               <img
