--- a/thefrontend/src/app/components/signin/signin.component.html
+++ b/thefrontend/src/app/components/signin/signin.component.html
@@ -6,7 +6,7 @@
             <div class="col-sm-12">
                 <!-- Authentication card start -->
                 <div class="login-card card-block auth-body mr-auto ml-auto">
-                    <form class="md-float-material">
+                    <form class="md-float-material" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
                         <div class="text-center">
                             <img src="assets/images/logo.png" alt="logo.png">
                         </div>
@@ -18,11 +18,11 @@
                             </div>
                             <hr/>
                             <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Your Email Address">
+                                <input type="email" class="form-control" formControlName="email" placeholder="Your Email Address">
                                 <span class="md-line"></span>
                             </div>
                             <div class="input-group">
-                                <input type="password" class="form-control" placeholder="Password">
+                                <input type="password" class="form-control" formControlName="password" placeholder="Password">
                                 <span class="md-line"></span>
                             </div>
                             <div class="row m-t-25 text-left">
@@ -41,7 +41,7 @@
                             </div>
                             <div class="row m-t-30">
                                 <div class="col-md-12">
-                                    <button type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Sign in</button>
+                                    <button type="submit" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Sign in</button>
                                 </div>
                             </div>
                             <hr/>
