--- a/thefrontend/src/app/components/navbar/navbar.component.html
+++ b/thefrontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/user">Houssem-eddin</a>
-    
+
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -12,9 +12,15 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
-        </li>  
+        </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            >Dropdown</a
+          >
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Link</a></li>
             <li><a class="dropdown-item" href="#">Another link</a></li>
@@ -23,22 +29,36 @@
         </li>
       </ul>
     </div>
-    
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"><img src="/images/houssem.jpg" alt="Logo" style="width:40px;" class="rounded-pill"></a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" (click)="logout()">logout</a></li>
-          </ul>
-        </li>
-      </ul>
-      <div style="color: transparent;">aaaaaaaaaaa</div>
-    
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          role="button"
+          data-bs-toggle="dropdown"
+          ><img
+            src="/images/houssem.jpg"
+            alt="Logo"
+            style="width: 40px"
+            class="rounded-pill"
+          /><strong>user</strong></a
+        >
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Link</a></li>
+          <li><a class="dropdown-item" href="#">Another link</a></li>
+          <li><a class="dropdown-item" (click)="logout()">logout</a></li>
+        </ul>
+      </li>
+    </ul>
+    <div style="color: transparent">aaaaaaaaaaa</div>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#collapsibleNavbar"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
-
 </nav>
