--- a/thefrontend/src/app/components/sidebar/sidebar.component.html
+++ b/thefrontend/src/app/components/sidebar/sidebar.component.html
@@ -1,361 +1,90 @@
-<nav class="pcoded-navbar">
-    <div class="sidebar_toggle">
-      <a href="#"><i class="icon-close icons"></i></a>
-    </div>
-    <div class="pcoded-inner-navbar main-menu">
-      <div
-        class="pcoded-navigatio-lavel"
-        data-i18n="nav.category.navigation"
+<div
+  class="d-flex flex-column flex-shrink-0 bg-dark text-white position-fixed"
+  style="width: 280px; height: 100vh"
+>
+  <a
+    href="/"
+    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none p-3"
+  >
+    <svg class="bi me-2" width="40" height="32">
+      <use xlink:href="#bootstrap" />
+    </svg>
+    <span class="fs-4">Sidebar</span>
+  </a>
+  <hr class="my-0" />
+  <ul class="nav nav-pills flex-column mb-auto p-3">
+    <li class="nav-item">
+      <a
+        href="#"
+        class="nav-link active bg-primary text-white"
+        aria-current="page"
       >
-        Layout
-      </div>
-      <ul class="pcoded-item pcoded-left-item">
-        <li class="active">
-          <a href="index.html">
-            <span class="pcoded-micon"
-              ><i class="ti-home"></i><b>D</b></span
-            >
-            <span class="pcoded-mtext" data-i18n="nav.dash.main"
-              >Dashboard</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-        </li>
-        <li class="pcoded-hasmenu">
-          <a href="javascript:void(0)">
-            <span class="pcoded-micon"
-              ><i class="ti-layout-grid2-alt"></i
-            ></span>
-            <span
-              class="pcoded-mtext"
-              data-i18n="nav.basic-components.main"
-              >Components</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-          <ul class="pcoded-submenu">
-            <li class=" ">
-              <a href="accordion.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.alert"
-                  >Accordion</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="breadcrumb.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Breadcrumbs</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="button.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.alert"
-                  >Button</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="tabs.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Tabs</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="color.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.alert"
-                  >Color</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="label-badge.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Label Badge</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="tooltip.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.alert"
-                  >Tooltip</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="typography.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Typography</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="notification.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.alert"
-                  >Notification</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="icon-themify.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Themify</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <div class="pcoded-navigatio-lavel" data-i18n="nav.category.forms">
-        Forms &amp; Tables
-      </div>
-      <ul class="pcoded-item pcoded-left-item">
-        <li>
-          <a href="form-elements-component.html">
-            <span class="pcoded-micon"
-              ><i class="ti-layers"></i><b>FC</b></span
-            >
-            <span
-              class="pcoded-mtext"
-              data-i18n="nav.form-components.main"
-              >Form Components</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-        </li>
-        <li>
-          <a href="bs-basic-table.html">
-            <span class="pcoded-micon"
-              ><i class="ti-layers"></i><b>FC</b></span
-            >
-            <span
-              class="pcoded-mtext"
-              data-i18n="nav.form-components.main"
-              >Basic Table</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-        </li>
-      </ul>
-
-      <div class="pcoded-navigatio-lavel" data-i18n="nav.category.forms">
-        Chart &amp; Maps
-      </div>
-      <ul class="pcoded-item pcoded-left-item">
-        <li>
-          <a href="chart.html">
-            <span class="pcoded-micon"
-              ><i class="ti-layers"></i><b>FC</b></span
-            >
-            <span
-              class="pcoded-mtext"
-              data-i18n="nav.form-components.main"
-              >Chart</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-        </li>
-        <li>
-          <a href="map-google.html">
-            <span class="pcoded-micon"
-              ><i class="ti-layers"></i><b>FC</b></span
-            >
-            <span
-              class="pcoded-mtext"
-              data-i18n="nav.form-components.main"
-              >Maps</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-        </li>
-        <li class="pcoded-hasmenu">
-          <a href="javascript:void(0)">
-            <span class="pcoded-micon"
-              ><i class="ti-layout-grid2-alt"></i
-            ></span>
-            <span
-              class="pcoded-mtext"
-              data-i18n="nav.basic-components.main"
-              >Pages</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-          <ul class="pcoded-submenu">
-            <li class=" ">
-              <a href="auth-normal-sign-in.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.alert"
-                  >Login</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="auth-sign-up.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Register</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class=" ">
-              <a href="sample-page.html">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.basic-components.breadcrumbs"
-                  >Sample Page</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-
-      <div class="pcoded-navigatio-lavel" data-i18n="nav.category.other">
-        Other
-      </div>
-      <ul class="pcoded-item pcoded-left-item">
-        <li class="pcoded-hasmenu">
-          <a href="javascript:void(0)">
-            <span class="pcoded-micon"
-              ><i class="ti-direction-alt"></i><b>M</b></span
-            >
-            <span class="pcoded-mtext" data-i18n="nav.menu-levels.main"
-              >Menu Levels</span
-            >
-            <span class="pcoded-mcaret"></span>
-          </a>
-          <ul class="pcoded-submenu">
-            <li class="">
-              <a href="javascript:void(0)">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.menu-levels.menu-level-21"
-                  >Menu Level 2.1</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-            <li class="pcoded-hasmenu">
-              <a href="javascript:void(0)">
-                <span class="pcoded-micon"
-                  ><i class="ti-direction-alt"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.menu-levels.menu-level-22.main"
-                  >Menu Level 2.2</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-              <ul class="pcoded-submenu">
-                <li class="">
-                  <a href="javascript:void(0)">
-                    <span class="pcoded-micon"
-                      ><i class="ti-angle-right"></i
-                    ></span>
-                    <span
-                      class="pcoded-mtext"
-                      data-i18n="nav.menu-levels.menu-level-22.menu-level-31"
-                      >Menu Level 3.1</span
-                    >
-                    <span class="pcoded-mcaret"></span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li class="">
-              <a href="javascript:void(0)">
-                <span class="pcoded-micon"
-                  ><i class="ti-angle-right"></i
-                ></span>
-                <span
-                  class="pcoded-mtext"
-                  data-i18n="nav.menu-levels.menu-level-23"
-                  >Menu Level 2.3</span
-                >
-                <span class="pcoded-mcaret"></span>
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
+        <svg class="bi me-2" width="16" height="16">
+          <use xlink:href="#home" />
+        </svg>
+        Home
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="16">
+          <use xlink:href="#speedometer2" />
+        </svg>
+        Dashboard
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="16">
+          <use xlink:href="#table" />
+        </svg>
+        Orders
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="16">
+          <use xlink:href="#grid" />
+        </svg>
+        Products
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link text-white">
+        <svg class="bi me-2" width="16" height="16">
+          <use xlink:href="#people-circle" />
+        </svg>
+        Customers
+      </a>
+    </li>
+  </ul>
+  <hr class="my-0" />
+  <div class="dropdown p-3">
+    <a
+      href="#"
+      class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+      id="dropdownUser1"
+      data-bs-toggle="dropdown"
+      aria-expanded="false"
+    >
+      <img
+        src="/images/houssem.jpg"
+        alt=""
+        width="32"
+        height="32"
+        class="rounded-circle me-2"
+      />
+      <strong>admin</strong>
+    </a>
+    <ul
+      class="dropdown-menu dropdown-menu-dark text-small shadow"
+      aria-labelledby="dropdownUser1"
+    >
+      <li><a class="dropdown-item" href="#">New project...</a></li>
+      <li><a class="dropdown-item" href="#">Settings</a></li>
+      <li><a class="dropdown-item" href="#">Profile</a></li>
+      <li><hr class="dropdown-divider" /></li>
+      <li><a class="dropdown-item" (click)="logout()">Sign out</a></li>
+    </ul>
+  </div>
+</div>
